moved MainPage to Views and updated it.

--- a/WeightTracker/AppShell.xaml
+++ b/WeightTracker/AppShell.xaml
@@ -4,12 +4,13 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:WeightTracker"
-    Shell.FlyoutBehavior="Disabled"
-    Title="WeightTracker">
+    xmlns:views="clr-namespace:WeightTracker.Views"
+    Title="WeightTracker"
+    Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate views:MainPage}"
         Route="MainPage" />
 
 </Shell>
