Updated Edit Profile Page

--- a/WeightTracker/AppShell.xaml
+++ b/WeightTracker/AppShell.xaml
@@ -10,7 +10,7 @@
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate views:MainPage}"
+        ContentTemplate="{DataTemplate views:EditProfilePage}"
         Route="MainPage" />
 
 </Shell>
