--- a/WeightTracker/Views/MainPage.xaml
+++ b/WeightTracker/Views/MainPage.xaml
@@ -3,13 +3,16 @@
     x:Class="WeightTracker.Views.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:views="clr-namespace:WeightTracker.Views">
+    xmlns:model="clr-namespace:WeightTracker.Models"
+    xmlns:viewmodel="clr-namespace:WeightTracker.ViewModels"
+    xmlns:views="clr-namespace:WeightTracker.Views"
+    x:DataType="viewmodel:MainViewModel">
 
     <Grid
         Padding="20,0"
         ColumnDefinitions="auto,auto,*"
         ColumnSpacing="10"
-        RowDefinitions="auto,auto,auto,auto,auto,auto,auto,auto,*,*,*">
+        RowDefinitions="auto,auto,auto,auto,auto,auto,auto,auto,*">
         <Label
             Grid.ColumnSpan="3"
             FontSize="Title"
@@ -65,6 +68,7 @@
         <Label
             Grid.Row="4"
             Grid.ColumnSpan="3"
+            Margin="0,10,0,0"
             FontSize="Subtitle"
             HorizontalOptions="Start"
             Text="New measurement"
@@ -73,7 +77,9 @@
         <StackLayout
             Grid.Row="5"
             Grid.ColumnSpan="2"
-            Orientation="Vertical">
+            Orientation="Vertical"
+            Spacing="10">
+
             <StackLayout Orientation="Horizontal" Spacing="8">
                 <Label
                     FontSize="Body"
@@ -84,24 +90,33 @@
                     Keyboard="Numeric"
                     Placeholder="70"
                     VerticalTextAlignment="Center"
-                    WidthRequest="70" />
+                    WidthRequest="50" />
                 <Label
                     FontSize="Body"
                     Text="kg"
                     VerticalTextAlignment="Center" />
 
             </StackLayout>
-            <StackLayout Orientation="Horizontal" Spacing="10">
+            <Grid
+                ColumnDefinitions="auto,auto,auto"
+                ColumnSpacing="7"
+                RowDefinitions="auto">
                 <Label
                     FontSize="Body"
-                    Text="Date (dd/mm/YYYYY):"
+                    Text="Date and time: "
                     VerticalTextAlignment="Center" />
-                <Entry
-                    FontSize="Body"
-                    Keyboard="Text"
-                    Placeholder="3/11/1969" />
+                <DatePicker
+                    Grid.Column="1"
+                    Date="{Binding SelectedDate, Mode=TwoWay}"
+                    VerticalOptions="Fill" />
+                <TimePicker
+                    Grid.Column="2"
+                    Margin="0,10,0,0"
+                    Format="HH:mm"
+                    Time="{Binding SelectedTime, Mode=TwoWay}"
+                    VerticalOptions="FillAndExpand" />
 
-            </StackLayout>
+            </Grid>
 
         </StackLayout>
 
@@ -109,6 +124,7 @@
             Grid.Row="5"
             Grid.Column="2"
             Margin="0,0,0,10"
+            Command="{Binding AddNewMeasurementCommand}"
             FontSize="Body"
             HorizontalOptions="End"
             Text="Add"
@@ -128,7 +144,22 @@
             HorizontalOptions="Start"
             Text="History:" />
 
-        <CollectionView Grid.Row="8" Grid.ColumnSpan="3">
+        <Button
+            Grid.Row="7"
+            Grid.Column="2"
+            Margin="0,10,0,0"
+            Command="{Binding FetchMeasurementsCommand}"
+            FontSize="Body"
+            HorizontalOptions="End"
+            Text="Fetch"
+            VerticalOptions="Center" />
+
+        <CollectionView
+            Grid.Row="8"
+            Grid.ColumnSpan="3"
+            Margin="0,10,0,10"
+            ItemsSource="{Binding Measurements}">
+
             <CollectionView.EmptyView>
                 <StackLayout Padding="10">
                     <Label
@@ -138,6 +169,17 @@
                         TextColor="Gray" />
                 </StackLayout>
             </CollectionView.EmptyView>
+
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="model:Measurement">
+                    <Frame>
+                        <StackLayout Orientation="Horizontal">
+                            <Label Text="{Binding TimePoint, StringFormat='Time point: {0:MM/dd/yyyy HH:mm}'}" />
+                            <Label Text="{Binding Weight, StringFormat=' --- Mass: {0} kg'}" />
+                        </StackLayout>
+                    </Frame>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
 
         </CollectionView>
 
