--- a/WeightTracker/Views/EditProfilePage.xaml
+++ b/WeightTracker/Views/EditProfilePage.xaml
@@ -126,6 +126,7 @@
                     Text="Save" />
                 <Button
                     Grid.Column="1"
+                    Command="{Binding GoBackCommand}"
                     FontSize="Body"
                     HorizontalOptions="End"
                     Text="Cancel" />
